k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gnu-hc-vnc
  namespace: gnu-hc
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure

spec:
  ingressClassName: traefik
  rules:
    - host: "gnu-hc.193.147.109.10.nip.io"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: gnu-hc-vnc
                port:
                  number: 6901
  tls:
    - secretName: gnu-hc-tls

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gnu-hc-internal-vnc
  namespace: gnu-hc
  #annotations:
  #  traefik.ingress.kubernetes.io/router.entrypoints: websecure

spec:
  ingressClassName: traefik
  rules:
    - host: "gnu-hc.10.129.0.2.nip.io"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: gnu-hc-vnc
                port:
                  number: 6901
  #tls:
  #  - secretName: gnu-hc-internal-tls
